@@ -212,6 +212,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   Special:Wantedcategories and Special:Mostlinkedcategories.
 * (bug 3309) Allow comments when undeleting pages
 * Clean up Special:Undelete a bit
+* (bug 5805) message nbytes can now use {{plural:}}
+* Clean up Special:Imagelist a bit
 
 == Compatibility ==
 
